# ocaml-allegro-5

./: .editorconfig  .gitignore  CHANGES.md  README.md  allegro5.opam  allegro5.opam.template  allegro5_main.opam  dune  dune-project  index.html
allegro5/: index.html
allegro5/Al5/: index.html
allegro5/Al5/Bitmap/: index.html
allegro5/Al5/Display/: index.html
allegro5/Al5/DisplayMode/: index.html
allegro5/Al5/DisplayOrientation/: index.html
allegro5/Al5/Event/: index.html
allegro5/Al5/Event/MouseButton/: index.html
allegro5/Al5/Event/MouseMove/: index.html
allegro5/Al5/Event/Touch/: index.html
allegro5/Al5/Flip/: index.html
allegro5/Al5/JoystickState/: index.html
allegro5/Al5/Key/: index.html
allegro5/Al5/KeyboardState/: index.html
allegro5/Al5/Keymod/: index.html
allegro5/Al5/LineCap/: index.html
allegro5/Al5/LineJoin/: index.html
allegro5/Al5/MouseButton/: index.html
allegro5/Al5/MouseState/: index.html
allegro5/Al5/Playmode/: index.html
allegro5/Al5/ShaderPlatform/: index.html
allegro5/Al5/ShaderType/: index.html
allegro5/Al5/StandardPath/: index.html
allegro5/Al5/Text/: index.html
allegro5/Al5/TouchState/: index.html
allegro5/Al5/Ttf/: index.html
data/: dune
lib/: acodec.c  al5.c  al5.h  al5.ml  al5.mli  al5_main.ml  audio.c  compile_flags.txt  display.c  dune  events.c  font.c  graphics.c  graphics.h  image.c  joystick.c  keyboard.c  keyboard.h  main.c  mouse.c  primitives.c  shader.c  system.c  time.c  timer.c  touch.c
test/: dune  test_al_rest.ml  test_al_wait_for_event.ml  test_al_wait_for_event_timed.ml  test_al_wait_for_event_until.ml  test_ocaml_allegro.ml
