(rule
 (targets c_flags.sexp)
 (action
  (with-stdout-to %{targets}
   (progn
    (echo "(")
    (run "pkg-config" "--cflags" "allegro_acodec-5" "allegro_image-5" "allegro_primitives-5" "allegro_ttf-5")
    (echo ")")))))

(rule
 (targets lib_flags.sexp)
 (action
  (with-stdout-to %{targets}
   (progn
    (echo "(")
    (run "pkg-config" "--libs" "allegro_acodec-5" "allegro_image-5" "allegro_primitives-5" "allegro_ttf-5")
    (echo ")")))))

(library
 (name al5)
 (public_name allegro5)
 (foreign_stubs
  (language c)
  (names al5 display events graphics joystick keyboard mouse shader system time timer acodec audio font image primitives)
  (flags :standard -std=c11 -Wall -O2 (:include c_flags.sexp)))
 (c_library_flags :standard (:include lib_flags.sexp)))
